test admin page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                     <li>
                         <a href="#gallery-block">Gallery</a>
                     </li>
+                    <li>
+                        <a href="admin.html">Admin</a>
+                    </li>
                 </ul>
             </div>
         </div>
