--- a/admin.html
+++ b/admin.html
@@ -15,6 +15,7 @@
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/page.js"></script>
+    <script src="js/admin.js"></script>
 
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -113,35 +114,74 @@
         <div class="container-fluid">
             <h1 class="text-center">Our students</h1>
 
-            <div class="dropdown col-xs-2 col-xs-offset-8 col-lg-1 col-lg-offset-10">
-                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Sort By
+            <div class="dropdown col-xs-2 col-xs-offset-8 col-lg-1 col-lg-offset-10" id="sort">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" id="sort-dropdown">
+                    Sort By
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="#">Student number</a>
+                        <a href="#">
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" name="sort-by" checked="true" value="number">Student Number</label>
+                            </div>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">Name</a>
+                        <a href="#">
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" name="sort-by" value="first_name">Name</label>
+                            </div>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">Surname</a>
+                        <a href="#">
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" name="sort-by" value="second_name">Surname</label>
+                            </div>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">Exam #1</a>
+                        <a href="#">
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" name="sort-by" value="exam1">Exam #1</label>
+                            </div>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">Exam #2</a>
+                        <a href="#">
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" name="sort-by" value="exam2">Exam #2</label>
+                            </div>
+                        </a>
                     </li>
                     <li>
-                        <a href="#">Score</a>
+                        <a href="#">
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" name="sort-by" value="score">Score</label>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="radio">
+                                <label>
+                                    <input type="radio" name="sort-by" value="lesson">Lesson</label>
+                            </div>
+                        </a>
                     </li>
                     <li class="divider"></li>
                     <li>
                         <a href="#">
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="sort-type">Ascending</label>
+                                    <input type="radio" name="sort-order" checked="true" value="asc">Ascending</label>
                             </div>
                         </a>
                     </li>
@@ -149,15 +189,18 @@
                         <a href="#">
                             <div class="radio">
                                 <label>
-                                    <input type="radio" name="sort-type">Descending</label>
+                                    <input type="radio" name="sort-order" value="desc">Descending</label>
                             </div>
                         </a>
                     </li>
                 </ul>
             </div>
 
-            <table class="table table-hover">
+            <table class="table table-hover" id="students-list">
                 <thead>
+                    <th>
+                        <input type="checkbox">
+                    </th>
                     <th>Student Number</th>
                     <th>Name</th>
                     <th>Surname</th>
@@ -168,114 +211,101 @@
                 <tbody>
                 </tbody>
             </table>
+
+            <div class="container-fluid">
+                <button class="btn btn-success" id="add-student" aria-controls="#students-list">Add</button>
+                <button class="btn btn-info" id="edit-student" aria-controls="#students-list" disabled>Edit</button>
+                <button class="btn btn-danger" id="remove-student" aria-controls="#students-list" disabled>Remove</button>
+            </div>
         </div>
     </div>
 
     <div class="list-group" style="display: none; position: fixed;" id="edit-context-menu">
-        <a href="#" class="list-group-item">Edit</a>
-        <a href="#" class="list-group-item">Remove</a>
-        <a href="#" class="list-group-item">Add</a>
+        <a href="#" class="list-group-item" id="edit-student-context" aria-controls="#students-list">Edit</a>
+        <a href="#" class="list-group-item" id="remove-student-context" aria-controls="#students-list">Remove</a>
+        <a href="#" class="list-group-item" id="add-student-context" aria-controls="#students-list">Add</a>
+    </div>
+
+    <div class="container edit-background" id="edit-window">
+        <div class="edit-block">
+            <div class="container-fluid">
+                <h3 class="text-center" style="padding-bottom: 7px; color: white;">Edit</h3>
+                <div class="col-xs-12 col-sm-2 col-sm-offset-1 col-md-2 col-md-offset-1">
+                    <input class="form-control" id="edit-number" placeholder="Student number" disabled>
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <input class="form-control" id="edit-name" placeholder="Name">
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <input class="form-control" id="edit-surname" placeholder="Surname">
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <input class="form-control" id="edit-exam1" placeholder="Exam #1">
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <input class="form-control" id="edit-exam2" placeholder="Exam #2">
+                </div>
+
+                <div class="btn-group" style="width: 100%" id="edit-lesson-chooser">
+                    <button type="button" class="btn btn-primary col-xs-3 math-color" id="edit-math">Mathematics</button>
+                    <button type="button" class="btn btn-primary col-xs-3 physics-color" id="edit-physics">Physics</button>
+                    <button type="button" class="btn btn-primary col-xs-3 lit-color" id="edit-lit">Literature</button>
+                    <button type="button" class="btn btn-primary col-xs-3 chemistry-color" id="edit-chemistry">Chemistry</button>
+                </div>
+
+                <div class="col-xs-5 col-xs-offset-1">
+                    <button class="btn btn-success" style="width: 100%">Save</button>
+                </div>
+                <div class="col-xs-5">
+                    <button class="btn btn-danger" style="width: 100%">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container edit-background" id="add-window">
+        <div class="edit-block">
+            <div class="container-fluid">
+                <h3 class="text-center" style="padding-bottom: 7px; color: white;">Edit</h3>
+                <div class="col-xs-12 col-sm-2 col-sm-offset-1 col-md-2 col-md-offset-1">
+                    <input class="form-control" id="add-number" placeholder="Student number">
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <input class="form-control" id="add-name" placeholder="Name">
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <input class="form-control" id="add-surname" placeholder="Surname">
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <input class="form-control" id="add-exam1" placeholder="Exam #1">
+                </div>
+                <div class="col-xs-12 col-sm-2">
+                    <input class="form-control" id="add-exam2" placeholder="Exam #2">
+                </div>
+
+                <div class="btn-group" style="width: 100%" id="add-lesson-chooser">
+                    <button type="button" class="btn btn-primary col-xs-3 math-color" id="add-math">Mathematics</button>
+                    <button type="button" class="btn btn-primary col-xs-3 physics-color" id="add-physics">Physics</button>
+                    <button type="button" class="btn btn-primary col-xs-3 lit-color" id="add-lit">Literature</button>
+                    <button type="button" class="btn btn-primary col-xs-3 chemistry-color" id="add-chemistry">Chemistry</button>
+                </div>
+
+                <div class="col-xs-5 col-xs-offset-1">
+                    <button class="btn btn-success" style="width: 100%" disabled>Add</button>
+                </div>
+                <div class="col-xs-5">
+                    <button class="btn btn-danger" style="width: 100%">Cancel</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>
-        var maxStudents = 25;
-        var Student = function (n, fname, sname, e1, e2, less) {
-            this.number = n;
-            this.first_name = fname;
-            this.second_name = sname;
-            this.exam1 = e1;
-            this.exam2 = e2;
-            this.score = (parseInt(e1) + parseInt(e2)) / 2;
-            this.lesson = less;
-        };
 
-        jQuery.fn.extend({
-            progressBar: function (id, progress) {
-                $(this).html("<div class='progress' id='" + id + "'><div class='progress-bar' style='width: " + progress + "%'></div></div>")
-            },
-
-            addStudent: function (student) {
-                $(this).find("tbody").append(
-                    "<tr>" +
-                    "<td>" + student.number + "</td>" +
-                    "<td>" + student.first_name + "</td>" +
-                    "<td>" + student.second_name + "</td>" +
-                    "<td>" + student.exam1 + "</td>" +
-                    "<td>" + student.exam2 + "</td>" +
-                    "<td>" + student.score + "</td>" +
-                    "</tr>"
-                );
-            },
-
-            clearStudents: function () {
-                $(this).find("tbody").html("");
-            },
-
-            addStudents: function (students) {
-                var self = $(this);
-                for (var v of students) {
-                    self.addStudent(v);
-                }
-            }
-        });
-
-        var students = [
-            new Student("20161129063", "Andrei", "Sidorenko", 100, 90, "math"),
-            new Student("20161129001", "Test", "Test2", 80, 90, "lit"),
-            new Student("20161129001", "Test", "Test2", 70, 90, "lit")
-        ];
-
-        var groupsStatistics = new Map();
-        var averageScoreStatistics = new Map();
-        for (var v of students) {
-            if (!groupsStatistics.has(v.lesson)) {
-                groupsStatistics.set(v.lesson, 1);
-            } else {
-                groupsStatistics.set(v.lesson, groupsStatistics.get(v.lesson) + 1);
-            }
-
-            if (!averageScoreStatistics.has(v.lesson)) {
-                averageScoreStatistics.set(v.lesson, v.score);
-            } else {
-                var current = averageScoreStatistics.get(v.lesson);
-                averageScoreStatistics.set(v.lesson, (v.score + current) / groupsStatistics.get(v.lesson));
-            }
-        }
-
-        function initializeProgressBars() {
-            $(".pr-bar").progressBar("", 0);
-
-            for (var [key, val] of groupsStatistics) {
-                var el = $("#" + key + "-statistic .pr-bar .progress-bar");
-                el.addClass(key + "-color");
-                el.width((val / maxStudents) * 100 + "%");
-                el.html(val);
-            }
-
-            for (var [key, val] of averageScoreStatistics) {
-                var el = $("#" + key + "-average .pr-bar .progress-bar")
-                el.addClass(key + "-color");
-                el.width(val + "%");
-                el.html(val)
-            }
-        }
 
         $(function () {
-            initializeProgressBars();
 
-            $("#students-info").addStudents(students);
-
-            $("#students-info td").contextmenu(function (e) {
-                e.preventDefault();
-                var cmenu = $("#edit-context-menu");
-                cmenu.css({ top: e.pageY, left: e.pageX + 15 });
-                cmenu.show();
-            });
-
-            $("body").click(function () {
-                $("#edit-context-menu").hide();
-            })
-        });
+        })
     </script>
 </body>
 
