link to index on admin page

--- a/admin.html
+++ b/admin.html
@@ -34,7 +34,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#home">Admin panel</a>
+                <a class="navbar-brand" href="index.html">Education Portal</a>
             </div>
 
             <div class="navbar-collapse collapse menu-contents" id="main-menu-contents">
