--- a/admin.html
+++ b/admin.html
@@ -124,7 +124,7 @@
                     Sort By
                     <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu pull-right">
                     <li>
                         <a href="#">
                             <div class="radio">
